turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:18: error: not found: value doite
  doite(90)
  ^Kerr40:29: error: not found: value doite
  doite(90)
  ^